--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     Drag and drop this icon
-    <a href="javascript:(function(){var s=document.createElement('script');s.type='text/javascript';s.src='//http://www.carlostoxtli.com/github-pages-cms/inject.js';(top.document.body || top.document.getElementsByTagName('head')[0]).appendChild(s);})();">
+    <a href="javascript:(function(){var s=document.createElement('script');s.type='text/javascript';s.src='//www.carlostoxtli.com/github-pages-cms/inject.js';(top.document.body || top.document.getElementsByTagName('head')[0]).appendChild(s);})();">
       <img src="http://icocentre.com/Icons/wc-upload.png?size=16">
     </a> 
     to your booksmarks bar
